--- a/ThinkWhat/Controllers/App/TopSurveysViewController/TopSurveysTableViewController/SurveyTableViewCell.xib
+++ b/ThinkWhat/Controllers/App/TopSurveysViewController/TopSurveysTableViewController/SurveyTableViewCell.xib
@@ -15,9 +15,9 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SurveyTableViewCell" customModule="ThinkWhat" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="topSurveyCell" id="KGk-i7-Jjw" customClass="SurveyTableViewCell" customModule="ThinkWhat" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="topSurveyCell" rowHeight="80" id="KGk-i7-Jjw" customClass="SurveyTableViewCell" customModule="ThinkWhat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -75,7 +75,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="completionPercentage" destination="fie-4K-3E1" id="RXn-UI-8Pm"/>
+                <outlet property="completionPercentage" destination="fie-4K-3E1" id="dmQ-xf-xa7"/>
                 <outlet property="duration" destination="pes-4x-Qy0" id="1ox-gU-HEH"/>
                 <outlet property="tags" destination="Iq4-kt-cp7" id="eIh-Cc-Xes"/>
                 <outlet property="title" destination="kOG-0O-rHh" id="dM8-fu-dik"/>
